cabal-version: 1.12

name:           hercules-ci-api-core
version:        0.1.4.0
synopsis:       Types and convenience modules use across Hercules CI API packages
category:       API, CI, Testing, DevOps, Nix
homepage:       https://github.com/hercules-ci/hercules-ci-agent#readme
bug-reports:    https://github.com/hercules-ci/hercules-ci-agent/issues
author:         Hercules CI contributors
maintainer:     info@hercules-ci.com
copyright:      2018-2021 Hercules CI
license:        Apache-2.0
build-type:     Simple
extra-source-files:
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/hercules-ci/hercules-ci

library
  exposed-modules:
      Hercules.API.Id
      Hercules.API.Name
      Hercules.API.Prelude
      Hercules.API.Servant
      Hercules.Error
  hs-source-dirs:
      src
  default-extensions: DeriveGeneric DeriveTraversable DisambiguateRecordFields FlexibleContexts InstanceSigs LambdaCase MultiParamTypeClasses NoImplicitPrelude OverloadedStrings RankNTypes TupleSections TypeApplications TypeOperators
  ghc-options: -Wall -fwarn-tabs -fwarn-unused-imports -fwarn-missing-signatures -fwarn-name-shadowing -fwarn-incomplete-patterns
  build-depends:
      aeson >= 2
    , base >=4.7 && <5
    , bytestring
    , containers
    , cookie
    , deepseq
    , exceptions
    , safe-exceptions
    , hashable
    , http-api-data
    , http-media
    , lens
    , katip >= 0.7.0.0
    , memory
    , lifted-base
    , monad-control
    , servant >=0.14.1
    , servant-auth
    , servant-auth-swagger
    , servant-swagger
    , servant-swagger-ui-core
    , string-conv
    , swagger2
    , text
    , time
    , uuid
  default-language: Haskell2010
