cabal-version: 1.12

name:           hercules-ci-cli
version:        0.1.0.0
homepage:       https://docs.hercules-ci.com
bug-reports:    https://github.com/hercules-ci/hercules-ci-agent/issues
author:         Hercules CI contributors
maintainer:     info@hercules-ci.com
copyright:      2018-2020 Hercules CI
license:        Apache-2.0
build-type:     Simple
extra-source-files:
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/hercules-ci/hercules-ci-agent

library
  exposed-modules:
      Hercules.CLI.Login
      Hercules.CLI.Main
      Hercules.CLI.State
  hs-source-dirs:
      src
  default-extensions: DeriveGeneric DeriveTraversable DisambiguateRecordFields FlexibleContexts InstanceSigs LambdaCase MultiParamTypeClasses NoImplicitPrelude OverloadedStrings RankNTypes TupleSections TypeApplications TypeOperators
  ghc-options: -Wall -fwarn-tabs -fwarn-unused-imports -fwarn-missing-signatures -fwarn-name-shadowing -fwarn-incomplete-patterns
  build-depends:
      aeson
    , base >=4.7 && <5
    , bytestring
    , containers
    , exceptions
    , katip
    , lifted-base
    , monad-control
    , optparse-applicative
    , protolude
    , rio
    , safe-exceptions
    , text
    , transformers-base
  default-language: Haskell2010

executable hci
  main-is: Main.hs
  other-modules:
  hs-source-dirs:
      hci
  default-extensions: DeriveGeneric DeriveTraversable DisambiguateRecordFields FlexibleContexts InstanceSigs LambdaCase MultiParamTypeClasses NoImplicitPrelude OverloadedStrings RankNTypes TupleSections TypeApplications TypeOperators
  ghc-options: -Wall -fwarn-tabs -fwarn-unused-imports -fwarn-missing-signatures -fwarn-name-shadowing -fwarn-incomplete-patterns -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , hercules-ci-cli
  default-language: Haskell2010

test-suite hercules-ci-cli-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      Spec
  hs-source-dirs:
      test
  default-extensions: DeriveGeneric DeriveTraversable DisambiguateRecordFields FlexibleContexts InstanceSigs LambdaCase MultiParamTypeClasses NoImplicitPrelude OverloadedStrings RankNTypes TupleSections TypeApplications TypeOperators
  ghc-options: -Wall -fwarn-tabs -fwarn-unused-imports -fwarn-missing-signatures -fwarn-name-shadowing -fwarn-incomplete-patterns -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , base >=4.7 && <5
    , hercules-ci-cli
    , hspec
  default-language: Haskell2010
