cabal-version: 1.12

name:           hercules-ci-cli
version:        0.1.0.0
homepage:       https://docs.hercules-ci.com
bug-reports:    https://github.com/hercules-ci/hercules-ci-agent/issues
author:         Hercules CI contributors
maintainer:     info@hercules-ci.com
copyright:      2018-2020 Hercules CI
license:        Apache-2.0
build-type:     Simple
extra-source-files:
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/hercules-ci/hercules-ci-agent

library
  exposed-modules:
      Hercules.CLI.Client
      Hercules.CLI.Common
      Hercules.CLI.Credentials
      Hercules.CLI.Effect
      Hercules.CLI.Git
      Hercules.CLI.Login
      Hercules.CLI.Main
      Hercules.CLI.Nix
      Hercules.CLI.Project
      Hercules.CLI.Secret
      Hercules.CLI.State
      Hercules.CLI.Options
  hs-source-dirs:
      src
  default-extensions: DeriveGeneric DeriveTraversable DisambiguateRecordFields FlexibleContexts InstanceSigs LambdaCase MultiParamTypeClasses NoImplicitPrelude OverloadedStrings RankNTypes TupleSections TypeApplications TypeOperators
  ghc-options: -Wall -fwarn-tabs -fwarn-unused-imports -fwarn-missing-signatures -fwarn-name-shadowing -fwarn-incomplete-patterns
  build-depends:
      aeson
    , aeson-pretty
    , attoparsec
    , base >=4.7 && <5
    , bytestring
    , containers
    , conduit
    , data-has
    , directory
    , exceptions
    , filepath
    , hercules-ci-agent
    , hercules-ci-api
    , hercules-ci-api-core
    , hercules-ci-cnix-expr
    , hercules-ci-cnix-store
    , hostname
    , http-client
    , http-client-tls
    , http-types
    , katip
    , lifted-base
    , monad-control
    , network-uri
    , optparse-applicative
    , process
    , protolude
    , rio
    , safe-exceptions
    , servant
    , servant-auth-client
    , servant-conduit
    , servant-client
    , servant-client-core
    , temporary
    , text
    , transformers-base
    , unix
    , unliftio
  default-language: Haskell2010

executable hci
  main-is: Main.hs
  other-modules:
  hs-source-dirs:
      hci
  default-extensions: DeriveGeneric DeriveTraversable DisambiguateRecordFields FlexibleContexts InstanceSigs LambdaCase MultiParamTypeClasses NoImplicitPrelude OverloadedStrings RankNTypes TupleSections TypeApplications TypeOperators
  ghc-options: -Wall -fwarn-tabs -fwarn-unused-imports -fwarn-missing-signatures -fwarn-name-shadowing -fwarn-incomplete-patterns -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , hercules-ci-cli
  default-language: Haskell2010

test-suite hercules-ci-cli-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      Spec
      Hercules.CLI.CredentialsSpec
  hs-source-dirs:
      test
  default-extensions: DeriveGeneric DeriveTraversable DisambiguateRecordFields FlexibleContexts InstanceSigs LambdaCase MultiParamTypeClasses NoImplicitPrelude OverloadedStrings RankNTypes TupleSections TypeApplications TypeOperators
  ghc-options: -Wall -fwarn-tabs -fwarn-unused-imports -fwarn-missing-signatures -fwarn-name-shadowing -fwarn-incomplete-patterns -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , base
    , containers
    , hercules-ci-cli
    , hspec
    , QuickCheck
  default-language: Haskell2010
