cabal-version: 1.12

name:           hercules-ci-cli
version:        0.3.1
synopsis:       The hci command for working with Hercules CI
homepage:       https://docs.hercules-ci.com
bug-reports:    https://github.com/hercules-ci/hercules-ci-agent/issues
author:         Hercules CI contributors
maintainer:     info@hercules-ci.com
copyright:      2018-2021 Hercules CI
license:        Apache-2.0
build-type:     Simple
extra-source-files:
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/hercules-ci/hercules-ci-agent

library
  exposed-modules:
      Hercules.CLI.Client
      Hercules.CLI.Common
      Hercules.CLI.Credentials
      Hercules.CLI.Effect
      Hercules.CLI.Exception
      Hercules.CLI.Git
      Hercules.CLI.JSON
      Hercules.CLI.Lock
      Hercules.CLI.Login
      Hercules.CLI.Main
      Hercules.CLI.Nix
      Hercules.CLI.Project
      Hercules.CLI.Secret
      Hercules.CLI.State
      Hercules.CLI.Options
  hs-source-dirs:
      src
  default-extensions: DeriveGeneric DeriveTraversable DisambiguateRecordFields FlexibleContexts InstanceSigs LambdaCase MultiParamTypeClasses NoImplicitPrelude OverloadedStrings RankNTypes TupleSections TypeApplications TypeOperators
  ghc-options: -Wall -fwarn-tabs -fwarn-unused-imports -fwarn-missing-signatures -fwarn-name-shadowing -fwarn-incomplete-patterns
  build-depends:
      aeson >= 2
    , aeson-pretty
    , async
    , atomic-write
    , attoparsec
    , base >=4.7 && <5
    , bytestring
    , containers
    , conduit
    , data-has
    , directory
    , exceptions
    , filepath
    , hercules-ci-agent
    , hercules-ci-api
    , hercules-ci-api-agent
    , hercules-ci-api-core
    , hercules-ci-cnix-expr
    , hercules-ci-cnix-store
    , hercules-ci-optparse-applicative
    , hostname
    , http-client
    , http-client-tls
    , http-types
    , katip
    , lens
    , lens-aeson
    , lifted-base
    , monad-control
    , network-uri
    , process
    , protolude
    , retry
    , rio
    , safe-exceptions
    , servant
    , servant-auth-client
    , servant-conduit
    , servant-client
    , servant-client-core
    , temporary
    , text
    , transformers
    , transformers-base
    , unix
    , unliftio
    , unliftio-core
    , unordered-containers
    , uuid
  default-language: Haskell2010

executable hci
  main-is: Main.hs
  other-modules:
  hs-source-dirs:
      hci
  default-extensions: DeriveGeneric DeriveTraversable DisambiguateRecordFields FlexibleContexts InstanceSigs LambdaCase MultiParamTypeClasses NoImplicitPrelude OverloadedStrings RankNTypes TupleSections TypeApplications TypeOperators
  ghc-options: -Wall -fwarn-tabs -fwarn-unused-imports -fwarn-missing-signatures -fwarn-name-shadowing -fwarn-incomplete-patterns -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , hercules-ci-cli
  default-language: Haskell2010

test-suite hercules-ci-cli-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      Spec
      Hercules.CLI.CredentialsSpec
      Hercules.CLI.JSONSpec
  hs-source-dirs:
      test
  default-extensions: DeriveGeneric DeriveTraversable DisambiguateRecordFields FlexibleContexts InstanceSigs LambdaCase MultiParamTypeClasses NoImplicitPrelude OverloadedStrings RankNTypes TupleSections TypeApplications TypeOperators
  ghc-options: -Wall -fwarn-tabs -fwarn-unused-imports -fwarn-missing-signatures -fwarn-name-shadowing -fwarn-incomplete-patterns -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , base
    , bytestring
    , containers
    , hercules-ci-cli
    , hspec
    , protolude
    , QuickCheck
    , unordered-containers
  default-language: Haskell2010
